[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaudit"
version = "0.1.0"
description = "Outil offensif d'audit de sécurité réseau - Projet Kactus"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "dnspython>=2.4",
    "python-whois>=0.9",
    "requests>=2.31",
]

[project.scripts]
pyaudit = "pyaudit.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
